--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "cSpell.words": [
+        "Brennen",
+        "Dabramov",
+        "Lorvaldes",
+        "Runn",
         "backcountry",
-        "contactus"
+        "contactus",
+        "youtube"
     ]
 }
